display.css
/* Basic Body Structure */

* {
	margin: 0;
	padding: 0;
	font-size: 100%;
  	word-wrap: break-word;
}	

body {
	color: #000;
	height: 100%;
 	z-index: 100;
	font-size: 12px;
	overflow: hidden;
	overflow-y: visible;
	background-color: #fff;
	font-family: "Lucida Grande";
	background:url(Data/Resources/linen.png);
}

#loading_screen { display:none; }

/* tables, yeah */

div#body_home { 
  display:table; 
  table-layout:fixed;
  border-collapse:separate;
	border-spacing:0px;
	background:#fff;
  }
div.line { display:table-row; }
div#mark { display:table-row; }
div.line .nick { display:table-cell; }
div#mark .blank,
div.line .blank { display:table-cell; }
div.line .msg { display:table-cell; }

.msg,
.msg p,
.msg p span.message
{
  word-wrap:break-word;
}

/* Remember Line */

div#mark {
  position: relative;
  z-index: 295;
/*  margin-top: -1px;*/
/*  border-bottom: 2px dotted;*/
  border-color: #c00;
  -webkit-transition: 0.2s linear;
}

div#mark div { border-bottom: 2px dashed #c33; }

/* Links */

a {
  color: #00e;
  border-color: #00e;
  text-decoration: none;
  border-bottom: dotted 1px;
}

a:hover {
  color: #0080FF;
  border-color: #0080FF;
}

/* Topic Bar */

#topic_bar {
  top: 0;
  left: 0;
  right: 0;
  color: #000;
  z-index: 400;
  opacity: 0.95;
  font-size: 10px;
  position: fixed;
  background: #CFD4DD;
  padding:0.5em;
  border-bottom: 1px solid #8387B6;
  -webkit-box-shadow: 0 1px 5px #777;
}


#topic_bar a {
  color: #00e;
  border-color: #00e;
}

#topic_bar a:hover {
  color: #0080FF;
  border-color: #0080FF;
}

/* Images */

body a img {
    border: 0;
}

body img {
    display: block;
    max-width: 95%;
    padding-top: 5px;
    padding-left: 8px;
    padding-bottom: 5px;
}

/* Nickname Colors */

body p[type=myself] .message {
	color: #222 !important;
}


body .sender[type*=normal][colornumber='0'], 
body .inline_nickname[colornumber='0'] {
	color: #0080ff; 
}

body .sender[type*=normal][colornumber='1'], 
body .inline_nickname[colornumber='1'] {
	color: #059005; 
}

body .sender[type*=normal][colornumber='2'], 
body .inline_nickname[colornumber='2'] {
	color: #a80054; 
}

body .sender[type*=normal][colornumber='3'], 
body .inline_nickname[colornumber='3'] {
	color: #9b0db1; 
}

body .sender[type*=normal][colornumber='4'], 
body .inline_nickname[colornumber='4'] {
	color: #108860; 
}

body .sender[type*=normal][colornumber='5'], 
body .inline_nickname[colornumber='5'] {
	color: #7F4FFF; 
}

body .sender[type*=normal][colornumber='6'], 
body .inline_nickname[colornumber='6'] {
	color: #58701a; 
}

body .sender[type*=normal][colornumber='7'], 
body .inline_nickname[colornumber='7'] {
	color: #620a8e; 
}

body .sender[type*=normal][colornumber='8'], 
body .inline_nickname[colornumber='8'] {
	color: #BB0008; 
}

body .sender[type*=normal][colornumber='9'], 
body .inline_nickname[colornumber='9'] {
	color: #44345f; 
}

body .sender[type*=normal][colornumber='10'], 
body .inline_nickname[colornumber='10'] {
	color: #2f5353; 
}

body .sender[type*=normal][colornumber='11'], 
body .inline_nickname[colornumber='11'] {
	color: #904000; 
}

body .sender[type*=normal][colornumber='12'], 
body .inline_nickname[colornumber='12'] {
	color: #808000; 
}

body .sender[type*=normal][colornumber='13'], 
body .inline_nickname[colornumber='13'] {
	color: #57797e; 
}

body .sender[type*=normal][colornumber='14'], 
body .inline_nickname[colornumber='14'] {
	color: #3333dd; 
}

body .sender[type*=normal][colornumber='15'], 
body .inline_nickname[colornumber='15'] {
	color: #5f4d22; 
}

body .sender[type*=normal][colornumber='16'], 
body .inline_nickname[colornumber='16'] { 
	color: #706616;
}

body .sender[type*=normal][colornumber='17'], 
body .inline_nickname[colornumber='17'] { 
	color: #46799c;
}

body .sender[type*=normal][colornumber='18'], 
body .inline_nickname[colornumber='18'] { 
	color: #80372e;
}

body .sender[type*=normal][colornumber='19'], 
body .inline_nickname[colornumber='19'] { 
	color: #8F478E;
}

body .sender[type*=normal][colornumber='20'], 
body .inline_nickname[colornumber='20'] { 
	color: #5b9e4c;
}

body .sender[type*=normal][colornumber='21'], 
body .inline_nickname[colornumber='21'] { 
	color: #13826c;
}

body .sender[type*=normal][colornumber='22'], 
body .inline_nickname[colornumber='22'] { 
	color: #b13637;
}

body .sender[type*=normal][colornumber='23'], 
body .inline_nickname[colornumber='23'] { 
	color: #e45d59;
}

body .sender[type*=normal][colornumber='24'], 
body .inline_nickname[colornumber='24'] { 
	color: #1b51ae;
}

body .sender[type*=normal][colornumber='25'], 
body .inline_nickname[colornumber='25'] { 
	color: #4855ac;
}

body .sender[type*=normal][colornumber='26'], 
body .inline_nickname[colornumber='26'] { 
	color: #7f1d86;
}

body .sender[type*=normal][colornumber='27'], 
body .inline_nickname[colornumber='27'] { 
	color: #73643f;
}

body .sender[type*=normal][colornumber='28'], 
body .inline_nickname[colornumber='28'] { 
	color: #0b9578;
}

body .sender[type*=normal][colornumber='29'], 
body .inline_nickname[colornumber='29'] { 
	color: #569c96;
}

body .sender[type*=normal][colornumber='30'], 
body .inline_nickname[colornumber='30'] { 
	color: #08465f;
}

/* mIRC Color Codes */

.effect[color-number='0'] { color: #fff; }
.effect[color-number='1'] { color: #000; }
.effect[color-number='2'] { color: #008; }
.effect[color-number='3'] { color: #080; }
.effect[color-number='4'] { color: #f00; }
.effect[color-number='5'] { color: #800; }
.effect[color-number='6'] { color: #808; }
.effect[color-number='7'] { color: #f80; }
.effect[color-number='8'] { color: #ff0; }
.effect[color-number='9'] { color: #0f0; }
.effect[color-number='10'] { color: #088; }
.effect[color-number='11'] { color: #0ff; }
.effect[color-number='12'] { color: #00f; }
.effect[color-number='13'] { color: #f0f; }
.effect[color-number='14'] { color: #888; }
.effect[color-number='15'] { color: #ccc; }
.effect[bgcolor-number='0'] { background-color: #fff; }
.effect[bgcolor-number='1'] { background-color: #000; }
.effect[bgcolor-number='2'] { background-color: #008; }
.effect[bgcolor-number='3'] { background-color: #080; }
.effect[bgcolor-number='4'] { background-color: #f00; }
.effect[bgcolor-number='5'] { background-color: #800; }
.effect[bgcolor-number='6'] { background-color: #808; }
.effect[bgcolor-number='7'] { background-color: #f80; }
.effect[bgcolor-number='8'] { background-color: #ff0; }
.effect[bgcolor-number='9'] { background-color: #0f0; }
.effect[bgcolor-number='10'] { background-color: #088; }
.effect[bgcolor-number='11'] { background-color: #0ff; }
.effect[bgcolor-number='12'] { background-color: #00f; }
.effect[bgcolor-number='13'] { background-color: #f0f; }
.effect[bgcolor-number='14'] { background-color: #888; }
.effect[bgcolor-number='15'] { background-color: #ccc; }

/* bonfire */

.chatlog .line div {
	border-bottom:1px solid #eee;
	padding:5px 6px;
}

.chatlog .line[nicktype=myself] div
{
	background:#ffffd7 !important;
	border-bottom:0px;
}

.chatlog .line span.time
{
  display:none;
}

.chatlog div.nick
{
	text-align:right;
	vertical-align:top;
	font-weight:bold;
	background:#eee;
	border-right:1px solid #ccc;
  width:17%;
	color:#444;
	white-space:nowrap;
	
  max-width:12em;
  min-width:120px;
	overflow: hidden;
	text-overflow: ellipsis;
}

.chatlog div.msg
{
  padding-right:8px;
	padding-left:8px;
	width:83%;
}

.chatlog div.msg a
{
	display:inline-block;
	white-space:nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

/*.chatlog .line[type=part] div,
.chatlog .line[type=quit] div
{
  overflow: hidden;
  text-overflow: ellipsis;

}
.chatlog .line[type=part] div .message,
.chatlog .line[type=quit] div .message
{
  display:block;
  overflow: hidden;
  white-space:nowrap;
  text-overflow: ellipsis;
}
*/

.chatlog .line[type=privmsg][highlight=true] div,
.chatlog .line[type=action][highlight=true] div {
	background:#CF6 !important;
	background:#D6FF88 !important;
}

/* icing */

.chatlog .line[type='notice'] .nick .sender { color:#333 !important }
.chatlog .line[type='notice'] .msg { color:#963; 
/*  background: #FDEAC0;*/
  color:#222;
  }
.chatlog .line[type='ctcp'] div
{
	font-size:0.9em;
	background:#C7EDA5;
}
  
  
.chatlog .line[type='debug'] .msg { 
	color:#060; 
	font-size:0.8em;
	background:#F2F7EA;
	}
/*.chatlog .line[type='reply'] .msg:before { content: "\2022 "; }*/

.chatlog .line[type='mode'] div,
.chatlog .line[type='topic'] div,
.chatlog .line[type='website'] div
{
	font-size:0.9em;
	background:#d9e7fb;
	border-bottom:1px solid #C8D9F2;
}
                            
.chatlog .line[type='quit'] div { font-size:0.8em; color:#999; }
.chatlog .line[type='part'] div { font-size:0.8em; color:#999; }
.chatlog .line[type='join'] div { font-size:0.8em; color:#696; }
.chatlog .line[type='nick'] div { font-size:0.8em; 
  color:#999; }

/*.chatlog .line[type='topic'] td { border-right:0; border-left:0; }*/
.chatlog .line[type='mode'] div { border-right:0; border-left:0; }


/* actions */
.chatlog .line[type=action] .message {}
.chatlog .line[type=action] .message:before {
	content: "●";
/*	margin-right: 0.4em;*/
}

.chatlog .line[type=action] .message:after {
	content: "●";
}

/* join part */

.chatlog .line[type=join] div:first-child:before ,
.chatlog .line[type=join] .xmessage:before {
	content: "→";
  	margin-right: 3px;
}
 { text-align:right; padding-right:0; }

.chatlog .line[type=kick] div:first-child:before,
.chatlog .line[type=part] div:first-child:before,
.chatlog .line[type=quit] div:first-child:before {
	content: "←";
  	margin-right: 3px;
}

.chatlog .line[type=join] div:first-child,
.chatlog .line[type=kick] div:first-child,
.chatlog .line[type=part] div:first-child,
.chatlog .line[type=quit] div:first-child,
.chatlog .line[type=nick] div:first-child
{
  text-align:right; padding-right:0;
}

.chatlog .line[type=join] div:last-child,
.chatlog .line[type=kick] div:last-child,
.chatlog .line[type=part] div:last-child,
.chatlog .line[type=quit] div:last-child,
.chatlog .line[type=nick] div:last-child
{
  padding-left:1px;
}


.chatlog .line[type=nick] div:first-child:after {
  text-align:right;
	content:"•";
    margin-right: 3px;
}

.chatlog .line.time div
{
	padding-top:15px;
	background:white;
	font-size:0.75em;
	color:#999;
	border-left:0px;
	border-right:0px;
}

/* blankslate */

#hello
{
  text-align:center;
  vertical-align:center;
  margin:auto;
  height:100%;
  font-family:'Helvetica Neue';
}

#hello .channel
{
  font-size:3em;
}

#topic_bar { display:none; }

#hello p
{
  border-radius:10px;
  padding:10px 20px;
  display:inline-block;
/*  background:rgba(255,255,255,0.5);*/
  position:relative;
  top:45%;
  margin-top:0.8em;
  font-size:2em;
  color:#777;
  font-weight:300;
/*  box-shadow:0px 1px 10px #666;*/
}

